--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -171,6 +171,9 @@
             </div>
             {% endfor %}
             <h2 class="text-center">OR</h2>
+            <form method="get">
+                <input type="text" name="topic" placeholder="Enter Your Custom Topic" />
+            </form>
         </div>
 
         <!-- main -->
